# JV-Compiler

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md  \  ast.txt  build.sh  compiler  install.sh  run.sh  test.cpp  test_read  test_read.cpp  test_run.sh  toy  valgrind_run.sh
lol/kek/: test.txt
source/: CMakeLists.txt
source/compiler/: main.cpp
source/compiler/ast/: ast.hpp  forward_declaration.hpp
source/compiler/ast/core/: ast_node.hpp  basic_list.hpp  binary_operations.cpp  binary_operations.hpp
source/compiler/ast/declarations/: class_declaration.cpp  class_declaration.hpp  class_declaration_list.cpp  class_declaration_list.hpp  declaration.cpp  declaration.hpp  declaration_list.cpp  declaration_list.hpp  field_declaration.cpp  field_declaration.hpp  method_declaration.cpp  method_declaration.hpp  variable_declaration.cpp  variable_declaration.hpp
source/compiler/ast/expressions/: array_idx_expression.cpp  array_idx_expression.hpp  binary_op_expression.cpp  binary_op_expression.hpp  bool_expression.cpp  bool_expression.hpp  compare_op_expression.cpp  compare_op_expression.hpp  expression.hpp  float_expression.cpp  float_expression.hpp  identifier_expression.cpp  identifier_expression.hpp  integer_expression.cpp  integer_expression.hpp  length_expression.cpp  length_expression.hpp  logic_op_expression.cpp  logic_op_expression.hpp  math_op_expression.cpp  math_op_expression.hpp  method_call_expression.cpp  method_call_expression.hpp  new_array_expression.cpp  new_array_expression.hpp  new_class_expression.cpp  new_class_expression.hpp  not_expression.cpp  not_expression.hpp  this_expression.cpp  this_expression.hpp
source/compiler/ast/functional/: comma_expression_list.cpp  comma_expression_list.hpp  method_call.cpp  method_call.hpp
source/compiler/ast/program/: main_class.cpp  main_class.hpp  program.cpp  program.hpp
source/compiler/ast/statements/: assert_statement.cpp  assert_statement.hpp  assignment_statement.cpp  assignment_statement.hpp  if_else_statement.cpp  if_else_statement.hpp  if_statement.cpp  if_statement.hpp  local_variable_statement.cpp  local_variable_statement.hpp  mehtod_call_statement.cpp  mehtod_call_statement.hpp  print_statement.cpp  print_statement.hpp  return_statement.cpp  return_statement.hpp  statement.hpp  statement_list.cpp  statement_list.hpp  statement_list_node.cpp  statement_list_node.hpp  statement_list_statement.cpp  statement_list_statement.hpp  while_statement.cpp  while_statement.hpp
source/compiler/ast/values/: array_l_value.cpp  array_l_value.hpp  field_l_value.cpp  field_l_value.hpp  identifier_l_value.cpp  identifier_l_value.hpp  l_value.hpp
source/compiler/core/: compiler.cpp  compiler.hpp  error.hpp  logger.cpp  logger.hpp
source/compiler/exceptions/: compilation_exception.cpp  compilation_exception.hpp  redeclaration_exception.cpp  redeclaration_exception.hpp  undeclared_variable_exception.cpp  undeclared_variable_exception.hpp
source/compiler/ir/objects/: array.hpp  array_ref.cpp  array_ref.hpp  bool.cpp  bool.hpp  class.hpp  class_info.cpp  class_info.hpp  class_ref.cpp  class_ref.hpp  float.cpp  float.hpp  integer.cpp  integer.hpp  ir_object.cpp  ir_object.hpp  method.cpp  method.hpp  object.hpp  object_factory.cpp  object_factory.hpp
source/compiler/ir/optimization/: levels.hpp
source/compiler/ir/util/: llvm_type_converter.cpp  llvm_type_converter.hpp  llvm_util.cpp  llvm_util.hpp
source/compiler/ir/visitors/: llvm_ir_visitor.cpp  llvm_ir_visitor.hpp
source/compiler/objects/: array.cpp  array.hpp  bool.cpp  bool.hpp  class.cpp  float.cpp  float.hpp  integer.cpp  integer.hpp  object.cpp  object.hpp  object_factory.cpp  object_factory.hpp
source/compiler/parser/: driver.cpp  driver.hpp  location.hh  parser.cpp  parser.hpp  parser.output  parser.y  scanner.cpp  scanner.hpp  scanner.l
source/compiler/scope/: anonymous_scope_layer.cpp  anonymous_scope_layer.hpp  class_scope_layer.cpp  class_scope_layer.hpp  class_table.cpp  class_table.hpp  method_scope_layer.cpp  method_scope_layer.hpp  scope_layer.cpp  scope_layer.hpp  symbol_layer_tree.cpp  symbol_layer_tree.hpp  symbol_table.cpp  symbol_table.hpp
source/compiler/scope/layers/: class_scope_layer.cpp  class_scope_layer.hpp  method_scope_layer.cpp  method_scope_layer.hpp  scope_layer.cpp  scope_layer.hpp
source/compiler/scope/tables/: class_table.cpp  class_table.hpp  symbol_layer_tree.cpp  symbol_layer_tree.hpp  symbol_table.cpp  symbol_table.hpp
source/compiler/types/: array_type.cpp  array_type.hpp  class_type.cpp  class_type.hpp  method_type.cpp  method_type.hpp  type.cpp  type.hpp  type_factory.cpp  type_factory.hpp
source/compiler/util/: compiler_flags.cpp  compiler_flags.hpp  program_stack.cpp  program_stack.hpp  symbol.cpp  symbol.hpp  symbol_table.cpp  symbol_table.hpp  visitor_helper.hpp
source/compiler/visitors/: class_table_visitor.hpp  empty_visitor.cpp  empty_visitor.hpp  file_print_visitor.cpp  file_print_visitor.hpp  graph_print_visitor.cpp  graph_print_visitor.hpp  interpreter.cpp  interpreter.hpp  llvm_ir_visitor.cpp  llvm_ir_visitor.hpp  print_visitor.cpp  print_visitor.hpp  symbol_table_visitor.cpp  symbol_table_visitor.hpp  symbol_tree_visitor.cpp  symbol_tree_visitor.hpp  visitor.hpp
test/: CMakeLists.txt  test_interpreter.cpp  test_ir.cpp  test_main.cpp
test/examples/: test1.jv  test_expression.jv  test_while.dmp
test/fixtures/: compiler_fixture.hpp
test/jv_programs/: test_expression.jv  test_if.jv  test_op.jv  test_while.jv
test/jv_programs/arrays/: class_array.jv  idx.jv  length.jv  lvalue_arr.jv  new_array.jv
test/jv_programs/classes/: advanced_class.jv  advanced_methods.jv  gc_classes.jv  many_classes.jv  redecl_class.jv  simple_class.jv  simple_methods.jv
test/jv_programs/convert/: narrowing.jv  not_convertible1.jv  not_convertible2.jv
test/jv_programs/passes/: no_pass.jv
test/jv_programs/primitive/: test_comments.jv  test_exp.jv  test_if.jv  test_op.jv
test/jv_programs/scopes/: multi_decl.jv  not_decl.jv  re_decl.jv
test/util/: output_buffer.cpp  output_buffer.hpp
(+16 files in other folders)
